Marked minimum stability

--- a/composer.json
+++ b/composer.json
@@ -40,5 +40,7 @@
                 "LaravelTidyTables": "Casperw\\LaravelTidyTables\\Facades\\LaravelTidyTables"
             }
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
