--- a/.env.travis
+++ b/.env.travis
@@ -2,10 +2,9 @@
 APP_ENV=testing
 APP_KEY=SomeRandomString
 
-DB_CONNECTION=testing
-DB_TEST_USERNAME=root
-DB_TEST_PASSWORD=
-
-CACHE_DRIVER=array
-SESSION_DRIVER=array
-QUEUE_DRIVER=sync
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=laravelAuth
+DB_USERNAME=root
+DB_PASSWORD=
