--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,20 @@
 language: php
 
 php:
-- 7.1
-- 7.2
+  - 7.1
+  - 7.2
+
+services:
+  - mysql
 
 before_script:
-- cp .env.travis .env
-- mysql -e 'create database homestead_test;'
-- composer self-update
-- composer install --no-interaction
-
-script:
-- vendor/bin/phpunit
+  - cp .env.travis .env
+  - mysql -u root -e 'create database laravelAuth;'
+  - composer self-update
+  - composer install --dev --prefer-source --no-interaction
+  - php artisan vendor:publish --tag=laraveltidytables.config
+  - php artisan key:generate
+  - php artisan migrate:install --env=testing --no-interaction
+  - composer dump-autoload
+  
+  script: vendor/bin/phpunit
