--- a/.env.travis
+++ b/.env.travis
@@ -1,8 +1,7 @@
+APP_ENV=tests
+APP_KEY=
 
-APP_ENV=testing
-APP_KEY=SomeRandomString
-
-DB_CONNECTION=testing
+DB_CONNECTION=tests
 DB_TEST_USERNAME=root
 DB_TEST_PASSWORD=
 
